<resources>
    <string name="app_name">Donation.5.0</string>
    <string name="action_settings">Settings</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="donateButton">Donate</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="labelAmount">Enter here</string>
    <string name="amountText">Amount</string>
    <string name="textTotalSoFar">Total so Far</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="menuReset">Reset</string>
</resources>